# nordic_hike_planner

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  check.py  pyproject.toml
.github/workflows/: ci.yml
data/: hardangervidda.json
src/nordic_hike_planner/: __init__.py  api.py  calculator.py  cli.py  models.py  planner.py  repository.py  scoring.py
tests/: test_api.py  test_cli.py  test_models.py  test_planner.py  test_repository.py  test_scoring.py
tests/data/: tiny_test_dataset.json
