[project]
name = "nordic-hike-planner"
version = "0.1.0"
description = "Plans multi-day hiking trips between Nordic mountain huts."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Alessio Di Blasio" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "typer>=0.13",
    "rich>=13.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "hypothesis>=6.115",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
nordic-hike = "nordic_hike_planner.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nordic_hike_planner"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=nordic_hike_planner --cov-report=term-missing"